--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,7 +1,7 @@
-#database.url=jdbc:hsqldb:file:D:/temp/topjava
+#database.url=jdbc:hsqldb:file:S:/temp/topjava
 
 database.url=jdbc:hsqldb:mem:topjava
-database.username=sa
+database.username=SA
 database.password=
 
 database.init=true
