--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
             <plugin>
                 <!--https://junit.org/junit5/docs/current/user-guide/#running-tests-build-maven -->
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-pluginmaven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
                 <configuration>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
